UI fixes
A few cases where col-xs-12 could be used. Some changes to settings page where certain text would not fit in label. Better to have extra space than overlapping text. Some `div.well` elements converted to `<pre><code>` to prevent text falling out of panels

--- a/public/css/bootstrap-custom.css
+++ b/public/css/bootstrap-custom.css
@@ -6,7 +6,7 @@
 }
 
 .container-narrow {
-    width: 800px;
+    max-width: 800px;
 }
 
 .panel-heading-buttons h3 {
